--- a/src/common.blocks/header/header.less
+++ b/src/common.blocks/header/header.less
@@ -18,6 +18,16 @@
   order: 3;
 }
 
+.site-nav__menu-snap {
+  & .site-nav__menu-svg {
+    transition: 0.3s;
+  }
+
+  &:hover .site-nav__menu-svg {
+    transform: rotateY(180deg);
+  }
+}
+
 .site-nav__inner {
   display: none;
 }
@@ -31,8 +41,8 @@
 }
 
 .header__logo-svg {
-  width: 95px;
-  height: 16px;
+  width: 92px;
+  height: 25px;
 }
 
 .header__order-btn {
@@ -40,6 +50,9 @@
 }
 
 .header__phone {
+  margin-right: 15px;
+  margin-left: auto;
+  
   display: flex;
   align-items: center;
 }
@@ -79,4 +92,148 @@
 
   border: 0.5px solid rgba(255, 255, 255, 0.3);
   border-radius: 50%;
+}
+
+@media (min-width: 1190px) {
+  .header {
+    position: relative;
+
+    background-image: url("./fon.png");
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 127px;
+      left: 0;
+      right: 0;
+      height: 1px;
+
+      background-color: rgba(255, 255, 255, 0.15);
+    }
+  }
+  
+  .header__inner {
+    margin-bottom: 52px;
+    padding-top: 40px;
+    margin-bottom: 142px;
+
+    flex-wrap: wrap;
+  }
+  
+  .header__site-nav {
+    order: 0;
+  }
+  
+  .header__mail {
+    margin-left: 64px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .mail__wrapper-svg {
+    width: 31px;
+    height: 31px;
+    margin-right: 10px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 50%;
+    border: 1px solid #777684;
+  }
+
+  .mail__link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(255, 255, 255, 0.49);
+  }
+  
+  .header__social-list {
+    margin-left: 60px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .social-list__item:not(:last-of-type) {
+    margin-right: 12px;
+  }
+
+  .social-list__link {
+    width: 42px;
+    height: 42px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 50%;
+    background-color: #444054;
+  }
+  
+  .header__logo-svg {
+    width: 167px;
+    height: 43px;
+    margin-left: 60px;
+  }
+  
+  .header__order-btn {
+    display: flex;
+  }
+  
+  .header__phone {
+    margin-right: 52px;
+    margin-left: 55px;
+  }
+  
+  .phone__call-link {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  
+  .call-link__wrapper {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 15px;
+  }
+  
+  .phone__prefix {
+    font-family: 'Proxima Nova Thin';
+    font-weight: 300;
+  }
+  
+  .phone__recall-link {
+    font-size: 10px;
+    line-height: 10px;
+    color: rgba(255, 255, 255, 0.5);
+  }
+  
+  .phone__svg-wrapper {
+    width: 33px;
+    height: 33px;
+    margin-right: 10px;
+  }
+
+  .header__order-btn {
+    padding: 16px 23px;
+
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 0.1em;
+    text-transform: none;
+
+    box-shadow: 0px 4px 40px rgba(235, 63, 87, 0.5);
+  }
+
+  .order-btn__svg {
+    margin-left: 7px;
+  }
 }
