--- a/src/common.blocks/header/slogan.less
+++ b/src/common.blocks/header/slogan.less
@@ -56,7 +56,6 @@
   width: 280px;
   margin: 0 auto;
   margin-bottom: 37px;
-  padding-bottom: 23px;
 
   display: flex;
   flex-direction: column;
@@ -109,8 +108,8 @@
     left: 0px;
 
     width: 100%;
-    border: 5px solid transparent;
-    border-image: linear-gradient(0deg, gray, blue);
+
+    border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 5px;
   }
 }
@@ -165,42 +164,54 @@
   .slogan__score {
     width: 62.5%;
     margin: 0;
-    margin-bottom: 37px;
-    padding-bottom: 23px;
+    margin-bottom: 71px;
   
     display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 5px;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  .score__button-wrapper {
+    min-width: 282px;
   }
   
   .score__link {
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 0px;
   
-    display: flex;
-    align-items: center;
-  
-    font-size: 12px;
-    line-height: 30px;
-  
-    &:hover {
-      --fill-color: var(--akcentColor);
-    }
+    font-size: 14px;
   }
   
   .score__svg {
-    margin-left: 5px;
+    margin-left: 10px;
   }
   
   .score__info {
-    width: 240px;
+    position: relative;
   
-    font-size: 14px;
+    width: auto;
+    padding: 20px 26px;
+    padding-left: 38px;
+  
+    font-size: 15px;
     line-height: 20px;
   
-    opacity: 0.8;
+    opacity: 1;
+  
+    &::before {
+      content: '';
+      position: absolute;
+  
+      top: -4px;
+      left: -6px;
+      right: 0px;
+  
+      width: calc(100% + 6px);
+      height: 100%;
+  
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 5px;
+    }
   }
 }
